# jobcarbon

./: .gitignore  Dockerfile.cloudflare  README.md  howoldisthisjob.py  howoldisthisjob_api.py  jobcarbon.py  jobcarbon_api.py  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  tsconfig.json  wrangler.jsonc
.context/: state.md
.github/workflows/: ci.yml
cloudflare/: worker-configuration.d.ts
cloudflare/migrations/: 0001_history.sql
cloudflare/src/: index.ts
demo-output/: combined-list.txt  extension-list.txt  webapp-list.txt
docs/: ats-prod-matrix-results-2026-04-20.json  ats-prod-matrix-results.json  ats-prod-smoke-2026-04-15.md  head-to-head-whenthisjobwasposted-2026-04-21.json  head-to-head-whenthisjobwasposted-2026-04-21.md
docs/qa-extension-2026-04-24/: README.md  all-supported-platforms-api-matrix-2026-04-24.json  all-supported-platforms-api-matrix-2026-04-25.json  api-sample-results.json  missing-platforms-api-sample-2026-04-24.json  platform-coverage.md  (+1 more)
extension/: README.md  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
scripts/: extension-smoke  extension-smoke.spec.mjs  package-lock.json  package.json  playwright.extension-smoke.config.mjs  run_prod_estimate_matrix.py
site/: README.md  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts
tests/: test_howoldisthisjob_api.py  test_howoldisthisjob_integration.py  test_howoldisthisjob_unit.py  test_jobcarbon_api.py  test_jobcarbon_integration.py  test_jobcarbon_unit.py
(+38 files in other folders)
