[project]
name = "howoldisthisjob"
version = "0.1.0"
description = "Estimate how old a job posting really is."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentry-sdk>=2.17",
]

[project.scripts]
howoldisthisjob = "howoldisthisjob:main"
howoldisthisjob-api = "howoldisthisjob_api:main"

[tool.setuptools]
py-modules = ["howoldisthisjob", "howoldisthisjob_api"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
